k8s/catalogue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalogue-service
  template:
    metadata:
      labels:
        app: catalogue-service
    spec:
      containers:
        - image: andrazceh/catalogue-service:2021-12-05-01-43-23
          name: catalogue-service
          ports:
            - containerPort: 8080
              name: server
              protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: catalogue-service
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      protocol: TCP
      targetPort: server
  selector:
    app: catalogue-service
