k8s/ingress-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxy-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    # nginx.ingress.kubernetes.io/ssl-redirect: "false" # ne forsiramo uporabe SSL
    # nginx.ingress.kubernetes.io/use-regex: "true" # se uporabi pri definiciji poti za usmerjanje - spodnji del SPEC
    # nginx.ingress.kubernetes.io/rewrite-target: /$2 # to kar pride po koncu /image-catalog/ se posreduje do mikrostoritve, npr. /image-catalog/v1/images
spec:
  rules:
    - http:
        paths:
          - path: /books/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: catalogue-service
                port:
                  number: 3000
          - path: /carts/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: carts-service
                port:
                  number: 3002
